# disk-based-bfs-runs

./: Cargo.toml
bfs-3x3-2-color-ufb/: Cargo.toml
bfs-3x3-2-color-ufb/src/: coord_cube.rs  cube.rs  lib.rs  transposition_tables.rs
bfs-3x3-2-color-ufr/: Cargo.toml
bfs-3x3-2-color-ufr/src/: coord_cube.rs  cube.rs  lib.rs  transposition_tables.rs
bfs-3x3-2-color/src/: main.rs
bfs-3x3-U-F2-R/: Cargo.toml
bfs-3x3-U-F2-R/src/: coord_cube.rs  cube.rs  lib.rs  transposition_tables.rs
bfs-3x3-U-r/: Cargo.toml
bfs-3x3-U-r/src/: coord_cube.rs  cube.rs  lib.rs  transposition_tables.rs
bfs-3x3-ep/: Cargo.toml
bfs-3x3-ep/src/: coord_cube.rs  cube.rs  lib.rs  transposition_tables.rs
bfs-4x4-U-2R/: Cargo.toml
bfs-4x4-U-2R/src/: coord_cube.rs  cube.rs  lib.rs  main.rs  transposition_tables.rs
bfs-kilominx-6gen-permutation-only/: Cargo.toml
bfs-kilominx-6gen-permutation-only/src/: lib.rs  minx.rs
bfs-megaminx-U-R/: Cargo.toml
bfs-megaminx-U-R/src/: coord_minx.rs  lib.rs  main.rs  minx.rs  transposition_tables.rs
run/: Cargo.toml
src/: bfs_3x3_2_color.rs  bfs_3x3_U_F2_R.rs  bfs_3x3_U_r.rs  bfs_megaminx_U_R.rs  corners_cube.rs  cp_all.rs  cube.rs  main.rs  minx.rs  tennis_ball_cube.rs
src/bfs_3x3_2_color/ufb/: bfs.rs  coord_cube.rs  cube.rs  (+1 more)
src/bfs_3x3_U_F2_R/: bfs.rs  coord_cube.rs  cube.rs  transposition_tables.rs
src/bfs_3x3_U_r/: bfs.rs  coord_cube.rs  cube.rs  transposition_tables.rs
src/bfs_4x4_U_2R/: bfs.rs  coord_cube.rs  transposition_tables.rs
src/bfs_megaminx_U_R/: bfs.rs  coord_minx.rs  minx.rs  transposition_tables.rs
(+4 files in other folders)
